base/ops/monitoring/grafana-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      volumes:
        - $patch: delete
          name: grafana-storage
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage
        - configMap:
            name: grafana-dashboard-jitsi
          name: grafana-dashboard-jitsi
      containers:
        - name: grafana
          volumeMounts:
            - name: grafana-dashboard-jitsi
              mountPath: /grafana-dashboard-definitions/0/jitsi
              readOnly: false
          resources:
            limits:
              cpu: 600m
              memory: 600Mi
            requests:
              cpu: 600m
              memory: 600Mi
      securityContext:
        fsGroup: 427
