base/ops/monitoring/metrics-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
spec:
  template:
    spec:
      containers:
      - name: metrics-server
        args:
          - --cert-dir=/tmp
          - --secure-port=4443
          # see https://github.com/kubernetes-sigs/metrics-server/blob/v0.3.6/README.md#flags
          - --kubelet-insecure-tls
          - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
