base/ops/monitoring/bbb-service.yaml
# Scrape stats of BBB. Endpoints are defined in overlays. 
kind: Service
apiVersion: v1
metadata:
  name: bbb
  namespace: monitoring
  labels:
    k8s-app: bbb-metrics
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
