base/ops/monitoring/turn-service.yaml
# used to scrape statistics of affiliated BigBlueButton project
# BBB endpoints are defined in overlays
kind: Service
apiVersion: v1
metadata:
  name: turn
  namespace: monitoring
  labels:
    k8s-app: turn-metrics
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
