base/ops/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # Important to allow serving from subpath, see patches for details:
    nginx.ingress.kubernetes.io/use-regex: "true"
